add create article template 🆗💯✅🎉

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-file.server_path=D:\\istad\\docs-imgs\\server
-file.client_path=\\img
+file.server_path=D:\\istad\\docs-imgs\\server\\
+file.client_path=/files/**
