--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.2.1'
     implementation 'com.github.javafaker:javafaker:1.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.5'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
 }
 
 tasks.named('test') {
