--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 file.server_path=D:\\istad\\docs-imgs\\server\\
 file.client_path=/files/**
+spring.thymeleaf.prefix=classpath:/templates/layouts/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=true
