--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-file.server_path=D:\\istad\\docs-imgs\\server\\
+file.server_path=${SERVER_PATH}
 file.client_path=/files/**
-spring.thymeleaf.prefix=classpath:/templates/layouts/
+spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
+server.port=${PORT}
