--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-file.server_path=/images/
+file.server_path=${SOURCE_PATH}
 file.client_path=/files/**
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
-server.port=8080
+server.port=${PORT}
