--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-file.server_path=${SOURCE_PATH}
+file.server_path=${SERVER_PATH}
 file.client_path=/files/**
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
